--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=parking-service
+
+server.port=8000
+server.servlet.context-path=/api
+
+# Database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking-ws?schema=public
+spring.datasource.username=postgres
+spring.datasource.password=admin
+# deprecated
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+
+spring.flyway.baseline-on-migrate = true
+
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
+# Endpoints documentation
+springdoc.api-docs.path=/docs
+# Endpoints documentation, swagger-ui
+springdoc.swagger-ui.path=/swagger-ui
